--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bluestyle.css">
+    <link rel="stylesheet" href="css/combine.css">
 
     <title>Document</title>
 </head>
 
 <body>
-    <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+    <div><img src="images/grunge-paint-background_1409-1337.jpg" alt="Hello World from Space"
+            style="width:100%;max-width:960px"></div>
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
 </body>
