--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
     <p>Error fixed</p>
+    <p>A new line in our file!</p>
 </body>
 
 </html>
