--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
     <p>Error fixed</p>
+    <p>Error fixed</p>
+    <p>Error fixed</p>
+    <p>Error fixed</p>
+    <p>Error fixed</p>
+
+
 </body>
 
 </html>
